--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Character Frequency Count from Sentence</title>
+    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="bootstrap-4.1.3-dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
@@ -39,6 +40,7 @@
 
         <div class="caption text-center">
             <h1>WELCOME</h1>
+            <p>Calculate the frequency of characters from a given Sentence</p>
         </div>
 
         <!--- End Landing Page Section -->
@@ -53,11 +55,11 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
-                    <textarea class="form-control" id="msg" rows="10"></textarea>
+                    <textarea class="form-control" id="msg" rows="10" placeholder="Enter some text here"></textarea>
                     <button type="button" class="btn btn-lg btn-outline-secondary" id="frqchk">Submit</button>
-                    <textarea class="form-control" id="freq" rows="15"></textarea>
-                    <input type="text" class="form-control" id="sum">
-                    <input type="text" class="form-control" id="word">
+                    <textarea class="form-control" id="freq" rows="15" placeholder="{}"></textarea>
+                    <input type="text" class="form-control" id="sum" placeholder="0">
+                    <input type="text" class="form-control" id="word" placeholder="0">
 
                 </div>
                 <div class="col-md-2"></div>
